--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.datasource.password=abc123
 #mybatis log
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #開啟mybatis駝峰命名自動開關(dept_id -> deptId)
-mybatis.configuration.map-underscore-to-camel-case=true
+#mybatis.configuration.map-underscore-to-camel-case=true
