--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=abc123
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #開啟mybatis駝峰命名自動開關(dept_id -> deptId)
 #mybatis.configuration.map-underscore-to-camel-case=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
