--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
 spring.application.name=CourseSelection
-#JDBC Driver
+# JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/school
 spring.datasource.username=root
 spring.datasource.password=abc123
-#mybatis log
+# mybatis log
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-#開啟mybatis駝峰命名自動開關(dept_id -> deptId)
-#mybatis.configuration.map-underscore-to-camel-case=true
+# 開啟mybatis駝峰命名自動開關(dept_id -> deptId)
+mybatis.configuration.map-underscore-to-camel-case=true
+# 設定上傳檔案的限制
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+# 需要配置才能改寫 WebSecurityConfiguration
+spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=true
