完成批次修改

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.application.name=CourseSelection
 # JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/school
+spring.datasource.url=jdbc:mysql://localhost:3306/school?allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=abc123
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
 # mybatis log
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 # 開啟mybatis駝峰命名自動開關(dept_id -> deptId)
@@ -14,3 +16,10 @@ spring.servlet.multipart.max-request-size=10MB
 # 需要配置才能改寫 WebSecurityConfiguration
 spring.main.allow-bean-definition-overriding=true
 spring.main.allow-circular-references=true
+# 設置跟目錄日置級別
+#logging.level.root=INFO
+
+# 設置特定package的級別
+#logging.level.org.springframework=DEBUG
+#logging.level.course.selection=DEBUG
+
