--- a/course-main/src/main/resources/application.properties
+++ b/course-main/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=CourseSelection
+spring.application.name=course-main
 # JDBC Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/school?allowMultiQueries=true
