--- a/course-main/pom.xml
+++ b/course-main/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.project</groupId>
-	<artifactId>CourseSelection</artifactId>
+	<artifactId>course-main</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>CourseSelection</name>
+	<name>course-main</name>
 	<description>MyProject</description>
 	<properties>
 		<java.version>17</java.version>
