--- a/course-auth/src/main/resources/application.properties
+++ b/course-auth/src/main/resources/application.properties
@@ -1,6 +1,25 @@
 spring.application.name=course-auth
 server.port=8082
 
+# JDBC Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/school?allowMultiQueries=true
+spring.datasource.username=root
+spring.datasource.password=abc123
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=30000
+
 # redis
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+# mybatis log
+mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+# 開啟mybatis駝峰命名自動開關(dept_id -> deptId)
+mybatis.configuration.map-underscore-to-camel-case=true
+# 設定上傳檔案的限制
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+# 需要配置才能改寫 WebSecurityConfiguration
+spring.main.allow-bean-definition-overriding=true
+spring.main.allow-circular-references=true
